correction de bug plus finalisation

--- a/src/app/views/RootLayout.fxml
+++ b/src/app/views/RootLayout.fxml
@@ -14,6 +14,9 @@
        <Tab closable="false" text="Morse">
            <fx:include fx:id="morseTabPage" source="morseTabPage.fxml"/>
        </Tab>
+       <Tab closable="false" text="Braille">
+           <fx:include source="brailleTabPage.fxml" fx:id="brailleTabPage"/>
+       </Tab>
 
    </tabs>
 </TabPane>
