--- a/src/app/views/cesarTabPage.fxml
+++ b/src/app/views/cesarTabPage.fxml
@@ -1,9 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://www.w3.org/2001/XInclude" fx:controller="app.controllers.CaesarController">
-    <Label fx:id="lblText" text="Helllo Caesar" />
-    <Button fx:id="btnBarTab" onAction="#vigenereEncrypt" text="Change text"/>
-</VBox>
+<?import javafx.scene.control.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
+
+<AnchorPane maxHeight="400.0" maxWidth="600.0" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controllers.CaesarController">
+    <children>
+        <Label layoutX="218.0" layoutY="6.0" text="Méthode du Chiffre de César" AnchorPane.topAnchor="6.0" />
+        <TextArea fx:id="caesarInputArea" layoutX="14.0" layoutY="101.0" prefHeight="250.0" prefWidth="200.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="395.0" AnchorPane.topAnchor="100.0" />
+        <Label layoutX="5.0" layoutY="84.0" prefHeight="17.0" prefWidth="67.0" text="Source Text" />
+        <TextField fx:id="caesarKey" layoutX="30.0" layoutY="44.0" prefHeight="25.0" prefWidth="175.0" AnchorPane.leftAnchor="32.0" AnchorPane.rightAnchor="395.0" AnchorPane.topAnchor="44.0" />
+        <Label layoutX="14.0" layoutY="48.0" text="Key :" AnchorPane.leftAnchor="5.0" />
+        <TextArea fx:id="caesarOutputArea" layoutX="376.0" layoutY="44.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="395.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="61.0" />
+        <Label layoutX="16.0" layoutY="365.0" text="Source File :" AnchorPane.bottomAnchor="18.0" AnchorPane.leftAnchor="5.0" />
+        <Button layoutX="272.0" layoutY="169.0" mnemonicParsing="false" onAction="#caesarEncrypt" text="Encrypt" textAlignment="CENTER" AnchorPane.leftAnchor="272.0" AnchorPane.rightAnchor="272.0" AnchorPane.topAnchor="170.0" />
+        <Button layoutX="271.0" layoutY="203.0" mnemonicParsing="false" onAction="#caesarDecrypt" text="Decrypt" AnchorPane.bottomAnchor="170.0" />
+        <Label layoutX="395.0" layoutY="48.0" text="Output Text" AnchorPane.topAnchor="44.0" />
+        <Label fx:id="caesarMessageLabel" layoutX="172.0" layoutY="365.0" prefHeight="17.0" prefWidth="215.0" /><!--message label-->
+        <Button fx:id="caesarChooseFileBtn" layoutX="79.0" layoutY="361.0" mnemonicParsing="false" text="Choose a File" onAction="#chooseAFile"/>
+    </children>
+</AnchorPane>
